[tool.poetry]
name = "juga"
version = "0.1.0"
description = ""
authors = ["Chanwoong Kim <me@chanwoong.kim>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"
bs4 = "^0.0.1"
asyncache = "^0.3.1"
typer = "^0.9.0"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
mypy = "*"
ptpython = "^3.0.7"
autopep8 = "^2.0.3"
flake8 = "^6.1.0"
flake8-import-order = "^0.18.2"
flake8-pytest-style = "^1.7.2"
flake8-logging-format = "^0.9.0"
flake8-comprehensions = "^3.14.0"
flake8-builtins = "^2.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.7.10"
pep8-naming = "^0.13.3"
pytest = "^7.4.0"

[tool.poetry.scripts]
juga = 'juga.__main__:run_cli'

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
aioresponses = "^0.7.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 120

[tool.isort]
profile = "google"
force_single_line = false
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = []
order_by_type = false
group_by_package = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
