[tool.poetry]
name = "juga"
version = "0.1.0"
description = ""
authors = ["Chanwoong Kim <me@chanwoong.kim>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"
bs4 = "^0.0.1"
asyncache = "^0.3.1"
typer = "^0.9.0"
pydantic = "^2.3.0"
rich = "^13.7.1"

[tool.poetry.dev-dependencies]
ruff = "*"
mypy = "*"
ptpython = "^3.0.7"
pytest = "^7.4.0"

[tool.poetry.scripts]
juga = 'juga.__main__:run_cli'

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
aioresponses = "^0.7.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.isort]
profile = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
